# Longxia

./: .gitignore  CHANGELOG.md  PLAN.md  README.md  ROADMAP.md
app/: index.html  package-lock.json  package.json  vite.config.ts
app/src/: App.module.css  App.tsx  main.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/core/: Cargo.toml
app/src-tauri/core/src/: accounts.rs  ai.rs  db.rs  dict_import.rs  error.rs  hsk_import.rs  lib.rs  models.rs  notebook.rs  ops.rs  srs.rs
app/src-tauri/examples/: import_cedict.rs  import_hsk.rs
app/src-tauri/server/: Cargo.toml
app/src-tauri/server/src/: main.rs  security.rs
app/src-tauri/src/: ai.rs  commands.rs  db.rs  dict_import.rs  error.rs  lib.rs  models.rs  notebook.rs
app/src/app/: nav.ts
app/src/app/AppShell/: AppShell.module.css  AppShell.tsx
app/src/components/: index.ts
app/src/components/Button/: Button.module.css  Button.tsx
app/src/components/Panel/: Panel.module.css  Panel.tsx
app/src/components/ProgressRing/: ProgressRing.module.css  ProgressRing.tsx
app/src/components/Tag/: Tag.module.css  Tag.tsx
app/src/components/TianGrid/: TianGrid.module.css  TianGrid.tsx
app/src/features/: PlaceholderScreen.module.css  PlaceholderScreen.tsx
app/src/features/auth/: AuthGate.module.css  AuthGate.tsx  TokenGate.module.css  TokenGate.tsx
app/src/features/notebook/: NotebookScreen.module.css  NotebookScreen.tsx
app/src/features/reader/: ReaderScreen.module.css  ReaderScreen.tsx  passages.ts
app/src/features/review/: ReviewScreen.module.css  ReviewScreen.tsx
app/src/features/speaking/: SpeakingScreen.module.css  SpeakingScreen.tsx  audio.ts  phrases.ts
app/src/features/today/: TodayScreen.module.css  TodayScreen.tsx
app/src/features/writing/: WritingScreen.module.css  WritingScreen.tsx  characters.ts
app/src/lib/: api.ts  cn.ts  pinyin.ts  transport.ts
app/src/styles/: globals.css  tokens.css
design/: wireframes.html
scripts/: expose.sh
