[workspace]
# Nested members reusing the shared core: `core` is the library; `server` is the
# Axum HTTP host. The root package (`app`, ".") is the Tauri host.
members = ["core", "server"]
# So a plain `cargo test`/`cargo build` from here covers every member (the core
# tests live in `core`), not just the root package.
default-members = [".", "core", "server"]

[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# All data, scheduling, dictionary, notebook, and AI logic lives here; the
# Tauri commands are thin wrappers over it (and the server will reuse it too).
longxia-core = { path = "core" }
# The host holds the connection as managed state, so it needs the SQLite types.
# `bundled` compiles SQLite from source so there is no system dependency; the
# feature is unified with core's identical dependency (compiled once).
rusqlite = { version = "0.32", features = ["bundled"] }
# Command wrappers stamp the current time before calling the core scheduler.
chrono = "0.4"

