[package]
name = "longxia-core"
version = "0.1.0"
edition = "2021"
description = "Shared core for the Lóngxiā study app: SQLite access, FSRS scheduling, CC-CEDICT import, notebook persistence, and the Claude client. Consumed by both the Tauri app and (later) the HTTP server."

[lib]
name = "longxia_core"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Local SQLite lives in the core only; hosts never see raw SQL. `bundled`
# compiles SQLite from source so there is no system dependency.
rusqlite = { version = "0.32", features = ["bundled"] }
# FSRS spaced-repetition scheduler (scheduling only, no training deps).
rs-fsrs = "1.2.1"
chrono = "0.4"
# HTTP client for the Claude API call (rustls to avoid a system OpenSSL dep).
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
